--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </table>
   <hr>
   <h3>Skills</h3>
-  <table border="1" cellspacing="5px">
+  <table cellspacing="5px">
     <tr>
       <td>
         <table>
